--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.4.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -25,7 +27,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
-},
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
